# ElasticStrain

./: CMakeLists.txt  README.md  conanfile.py  plugin.json
include/opendxa/wrappers/: elastic_strain.h
include/volt/: elastic_mapping.h  elastic_strain_engine.h  elastic_strain_service.h
scripts/: elastic_strain_plugin_wrapper.py
share/volt/lattices/: fcc.yml
src/: elastic_strain_engine.cpp  elastic_strain_service.cpp  main.cpp
src/analysis/: elastic_strain.cpp
src/functions/: elastic_strain.cpp
src/wrappers/: elastic_strain.cpp
